--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -8,29 +8,29 @@
              ResizeMode="NoResize" Title="Success Story" WindowStartupLocation="CenterScreen">
 
     <Grid>
-        <TextBox x:Name="TextboxSearch" HorizontalAlignment="Left" Height="23" Margin="113,10,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="488" KeyUp="TextboxSearch_KeyUp" />
-        <Label Content="Search" HorizontalAlignment="Left" Margin="28,10,0,0" VerticalAlignment="Top" Width="80" FontSize="16"/>
+        <TextBox x:Name="TextboxSearch" HorizontalAlignment="Left" Height="23" Margin="130,10,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="547" KeyUp="TextboxSearch_KeyUp" />
+        <Label Content="{DynamicResource LOCSucessStorySearch}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="115" FontSize="16" Height="35"/>
 
-        <ListView x:Name="ListviewGames" HorizontalAlignment="Left" Width="667" SelectionChanged="ListviewGames_SelectionChanged" FontSize="24" GridViewColumnHeader.Click="ListviewGames_onHeaderClick" Margin="10,50,0,0" VerticalAlignment="Top" Height="626">
+        <ListView x:Name="ListviewGames" HorizontalAlignment="Left" Width="667" SelectionChanged="ListviewGames_SelectionChanged" FontSize="24" GridViewColumnHeader.Click="ListviewGames_onHeaderClick" Margin="10,50,0,0" VerticalAlignment="Top" Height="649">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="{Binding ListviewGamesIcon}" Width="50">
+                    <GridViewColumn Header="{DynamicResource LOCSucessStorylvGamesIcon}" Width="50">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Image HorizontalAlignment="Center" Height="32" VerticalAlignment="Center" Width="32" Source="{Binding Icon}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn x:Name="hGameTitle" Header="{Binding ListviewGamesName}" Width="292" DisplayMemberBinding="{Binding Name}" />
-                    <GridViewColumn Header="{Binding ListviewGamesLastActivity}" Width="Auto" DisplayMemberBinding="{Binding LastActivity, StringFormat='dd/MM/yyyy HH:mm:ss'}" />
-                    <GridViewColumn Header="{Binding ListviewGamesSourceName}" Width="60" >
+                    <GridViewColumn Header="{DynamicResource LOCSucessStorylvGamesName}" Width="292" DisplayMemberBinding="{Binding Name}" />
+                    <GridViewColumn Header="{DynamicResource LOCSucessStorylvGamesLastActivity}" Width="Auto" DisplayMemberBinding="{Binding LastActivity, StringFormat='dd/MM/yyyy HH:mm:ss'}" />
+                    <GridViewColumn Header="{DynamicResource LOCSucessStorylvGamesSourceName}" Width="60" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <Label Content="{Binding SourceName}" FontFamily="/SuccessStory;component/Ressources/#font" HorizontalAlignment="Center" VerticalAlignment="Stretch" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="{Binding ListviewGamesProgression}" Width="100" >
+                    <GridViewColumn Header="{DynamicResource LOCSucessStorylvGamesProgression}" Width="100" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <ProgressBar Minimum="0" Maximum="100" Height="28" Value="{Binding Progression}" VerticalAlignment="Center" />
@@ -41,15 +41,15 @@
             </ListView.View>
         </ListView>
 
-        <Grid Margin="10,681,577,10" VerticalAlignment="Bottom">
-            <Label x:Name="lProgressionGlobal" Content="Global progression" HorizontalAlignment="Left" Width="200" FontSize="16" VerticalAlignment="Center" Margin="10,9,0,9"></Label>
-            <ProgressBar x:Name="pbProgressionGlobalCount" Minimum="0" Maximum="100" Height="28" VerticalAlignment="Center" Margin="0,10,0,11" HorizontalAlignment="Right" Width="452" />
+        <Grid Margin="10,0,0,10" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="667" Height="28">
+            <Label x:Name="lProgressionGlobal" Content="{DynamicResource LOCSucessStoryGlobalProgression}" HorizontalAlignment="Left" Width="210" FontSize="16"/>
+            <ProgressBar x:Name="pbProgressionGlobalCount" Minimum="0" Maximum="100" HorizontalAlignment="Right" Width="452" />
         </Grid>
 
 
 
-        <Grid Margin="0,50,10,0" HorizontalAlignment="Right" VerticalAlignment="Top" Height="178" Width="532">
-            <Label x:Name="lInfo" Content="Informations" VerticalAlignment="Top" Margin="10,0" FontSize="24" HorizontalAlignment="Center"/>
+        <Grid x:Name="scGameInformation" Margin="0,50,10,0" HorizontalAlignment="Right" VerticalAlignment="Top" Height="178" Width="532">
+            <Label x:Name="lInfo" Content="{DynamicResource LOCSucessStoryGameInformation}" VerticalAlignment="Top" Margin="10,0" FontSize="24" HorizontalAlignment="Center" Height="45" MinWidth="50"/>
 
             <Grid Margin="0,47,0,0" Height="35" VerticalAlignment="Top">
                 <Label x:Name="lTotalCount" Content="Achievements number" HorizontalAlignment="Left" Width="210" FontSize="16"></Label>
