--- a/Localization/fr_FR.xaml
+++ b/Localization/fr_FR.xaml
@@ -29,7 +29,7 @@
     <!-- ListViewGames -->
     <sys:String x:Key="LOCSucessStorylvGamesIcon">Icône</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesName">Name</sys:String>
-    <sys:String x:Key="LOCSucessStorylvGamesLastActivity">Début dernière session</sys:String>
+    <sys:String x:Key="LOCSucessStorylvGamesLastActivity">Dernière session</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesSourceName">Source</sys:String>
     <sys:String x:Key="LOCSucessStorylvGamesProgression">Progression</sys:String>
 
